--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -4,31 +4,46 @@ name: R-CMD-check
 
 jobs:
   R-CMD-check:
-    if: "! contains(github.event.head_commit.message, '[ci skip]')"
+    if: "! contains(github.event.head_commit.message, '[ci skip]')"    
 
+    timeout-minutes: 10
+    
     runs-on: ${{ matrix.config.os }}
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }}) ${{ matrix.config.label }}
-    
+
     strategy:
       fail-fast: false
       matrix:
         config:
-# 2021-07-28 #          - {os: windows-latest, r: 'devel'   }
-          - {os: windows-latest, r: 'release' }
-          - {os: macOS-latest,   r: 'devel'   }
-          - {os: macOS-latest,   r: 'release' }
-          - {os: ubuntu-20.04,   r: 'devel',   rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          - {os: ubuntu-20.04,   r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest", covr: 'true', label: 'w/ covr' }
+          - {os: windows-latest, r: 'devel'    }
+          - {os: windows-latest, r: 'release'  }
+          - {os: windows-latest, r: 'oldrel'   }
+#          - {os: macOS-latest,   r: 'devel'    }
+          - {os: macOS-latest,   r: 'release'  }
+          - {os: macOS-latest,   r: 'oldrel'   }
+          - {os: ubuntu-20.04,   r: 'devel'   }
+          - {os: ubuntu-20.04,   r: 'release' }
+          - {os: ubuntu-20.04,   r: 'oldrel'   }
+          - {os: ubuntu-20.04,   r: 'oldrel-1' }
+          - {os: ubuntu-20.04,   r: 'oldrel-2' }
+          - {os: ubuntu-20.04,   r: '3.4'      }
+          - {os: ubuntu-20.04,   r: 'release'  , language: ko,    label: ko    }
+          - {os: ubuntu-20.04,   r: 'release'  , language: zh_CN, label: zh_CN }
+          - {os: ubuntu-20.04,   r: 'release'  , language: zh_TW, label: zh_TW }
 
     env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      RSPM: https://packagemanager.rstudio.com/cran/__linux__/focal/latest
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-      R_FUTURE_RNG_ONMISUSE: error
+      ## R CMD check
+      _R_CHECK_CRAN_INCOMING_: false
       _R_CHECK_LENGTH_1_CONDITION_: true
       _R_CHECK_LENGTH_1_LOGIC2_: true
       _R_CHECK_MATRIX_DATA_: true
-      RSPM: ${{ matrix.config.rspm }}
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+      _R_CHECK_SUGGESTS_ONLY_: true
+      ## Test in other locale (optional)
+      LANGUAGE: ${{ matrix.config.language }}
 
     steps:
       - uses: actions/checkout@v2
@@ -37,7 +52,9 @@ jobs:
         with:
           r-version: ${{ matrix.config.r }}
 
-      - name: Query dependencies
+      - uses: r-lib/actions/setup-pandoc@master
+
+      - name: Query R package dependencies
         run: |
           install.packages('remotes')
           saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
@@ -52,23 +69,38 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
 
-      - name: Install dependencies
+      - name: Install R package system dependencies (Linux)
+        if: runner.os == 'Linux'
+        env:
+          RHUB_PLATFORM: linux-x86_64-ubuntu-gcc
+        run: |
+          Rscript -e "remotes::install_github('r-hub/sysreqs')"
+          sysreqs=$(Rscript -e "cat(sysreqs::sysreq_commands('DESCRIPTION'))")
+          sudo -s eval "$sysreqs"
+          sudo apt install -y libcurl4-openssl-dev
+
+      - name: Install R package dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
+          install.packages(".", repos = NULL, type = "source")  ## self vignette engine
+        shell: Rscript {0}
+
+      - name: Install 'rcmdcheck'
+        run: |
           remotes::install_cran("rcmdcheck")
+          library(rcmdcheck)  ## triggers an error, if installation failed
         shell: Rscript {0}
 
       - name: Session info
         run: |
           options(width = 100)
+          capabilities()
           pkgs <- installed.packages()[, "Package"]
           sessioninfo::session_info(pkgs, include_base = TRUE)
         shell: Rscript {0}
-        
+
       - name: Check
-        env:
-          _R_CHECK_CRAN_INCOMING_: false
-        run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
+        run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran", if (.Platform$OS.type == "windows" && getRversion() >= "4.2.0") "--no-multiarch"), error_on = "note", check_dir = "check")
         shell: Rscript {0}
 
       - name: Upload check results
@@ -77,21 +109,3 @@ jobs:
         with:
           name: ${{ runner.os }}-r${{ matrix.config.r }}-results
           path: check
-
-      - name: Test coverage - Install dependencies
-        if: matrix.config.covr == 'true'
-        run: |
-            sudo apt-get install --yes libcurl4-openssl-dev
-            Rscript -e "install.packages('covr')"
-            
-      - name: Test coverage
-        if: matrix.config.covr == 'true'
-        run: |
-          ## 1. Get 'Repository Upload Token' from Codecov:
-          ##    https://app.codecov.io/gh/<org>/<repo>/settings
-          ## 2. Set 'CODECOV_TOKEN' in GitHub Secrets:
-          ##    https://github.com/<org>/<repo>/settings/environments/
-          coverage <- covr::package_coverage()
-          print(coverage)
-          covr::codecov(coverage = coverage, token="${{secrets.CODECOV_TOKEN}}")
-        shell: Rscript {0}
